feat: code review

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,7 +1,7 @@
 .navbar {
     text-align: center;
     padding: 12px;
-    background-color: #c3aed6;;
+    background-color: #c3aed6;
 
 
     h1 {
