--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,14 +1,15 @@
-.s {
+.wrapper {
     margin-top: 150px;
+}
+
+.s {
     transform: scale(3);
 }
 
 .m {
-    margin-top: 150px;
     transform: scale(5);
 }
 
 .l {
-    margin-top: 150px;
     transform: scale(7);
-} 
+}
