refactoring: code review

--- a/src/pages/Film/Film.module.css
+++ b/src/pages/Film/Film.module.css
@@ -39,3 +39,9 @@
     margin-left: 100px;
     width: 200px;
 }
+
+.loading {
+    margin: 0 auto;
+    margin-top: 200px;
+    text-align: center;
+}
