--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,7 +1,10 @@
 .navbar {
-    text-align: center;
+    display: flex;
     padding: 12px;
+    align-items: center;
+    gap: 40px;
     background-color: #c3aed6;
+    justify-content: center;
 
     h1 {
         margin: 0;
@@ -10,10 +13,17 @@
     p {
         margin: 0;
     }
+    button {
+        background-color: rgb(75, 112, 182);
+    }
 }
 
 .content {
     flex: 1;
     padding: 12px;
     background: rgb(115, 173, 115);
+}
+
+.form {
+    max-width: 70px;
 }
