--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,30 +1,49 @@
 .navbar {
     display: flex;
+    justify-content: space-around;
     padding: 12px;
-    align-items: center;
     gap: 40px;
     background-color: #c3aed6;
-    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+}
 
-    h1 {
-        margin: 0;
-    }
+.tabs {
+    display: flex;
+    gap: 12px;
+}
 
-    p {
-        margin: 0;
-    }
-    button {
-        background-color: rgb(75, 112, 182);
-    }
+.settings {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.settings__languages {
+    margin-bottom: 12px;
+}
+
+.form {
+    max-width: 100px;
+    margin-top: 5px
+}
+
+.switch {
+    scale: 1.4;
+}
+
+.theme_toggler {
+    display: flex;
+    flex-direction: column;
+}
+
+.theme_toggler__icon {
+    text-align: center;
+    margin-bottom: 12px;
 }
 
 .content {
     flex: 1;
     padding: 12px;
-    background: rgb(115, 173, 115);
+    background: var(--background-main);
 }
-
-.form {
-    max-width: 70px;
-}
-
