--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -2,6 +2,10 @@
     text-align: center;
 }
 
+.title {
+    color: var(--color-main);
+}
+
 .form {
     display: flex;
     flex-direction: row;
@@ -14,6 +18,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    color: var(--color-main);
     gap: 60px;
     justify-content: center;
     margin-top: 30px;
