--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -3,7 +3,7 @@
 }
 
 .title {
-    color: var(--color-main);
+    /* color: var(--color-main); */
 }
 
 .form {
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    color: var(--color-main);
+    /* color: var(--color-main); */
     gap: 60px;
     justify-content: center;
     margin-top: 30px;
