--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,5 +1,16 @@
+* {
+    box-sizing: border-box;
+    font-size: 16px;
+}
 .card {
-    width: 18rem;
+    width: 282px;
+    height: 520px;
+    border-radius: 12px;
+    margin: 5px 10px 5px 5px;
+    --bs-card-spacer-y: 0;
+    --bs-card-spacer-x: 0;
+    --bs-card-title-spacer-y: 0;
+    font-size: 1rem;
 }
 
 .card__star {
@@ -10,7 +21,6 @@
     right: 30px;
     border: 1px solid #ef00ff;
     border-radius: 50%;
-    
     background-color: antiquewhite;
 }
 
@@ -21,12 +31,16 @@
 .card__poster {
     min-width: 260px;
     min-height: 420px;
+    border-radius: 8px;
 }
 
 .card__content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    padding: 0;
+    font-size: 1rem;
+}
+
+.card__title {
+    font-size: 1rem;
 }
 
 .card__content__link {
