--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -4,16 +4,16 @@
     min-height: 100%;
     width: 100%;
 
-    border: 1px solid red;
+    /* border: 1px solid red; */
     background: var(--background);
     background-image: var(--background-image);
     background-size: cover;
 }
 
 .page__content {
-    width: 1200px;
+    width: 1270px;
     margin: 0 auto;
-    border: 1px solid green;
+    /* border: 1px solid green; */
 }
 
 .navbar {
@@ -21,7 +21,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 14px;
-    border: 1px solid white;
+    /* border: 1px solid white; */
 }
 
 .settings {
