--- a/src/components/My_Card/My_Card.module.css
+++ b/src/components/My_Card/My_Card.module.css
@@ -1,19 +1,66 @@
-* {
-    box-sizing: border-box;
-    font-size: 16px;
-}
 .card {
-    font-size: 16px;
-    width: 282px;
-    height: 520px;
+    border: 2px solid green;
     border-radius: 12px;
-    margin: 5px 10px 5px 5px;
-    border: 3px solid #20283E;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    text-align: left;
+    margin-bottom: 16px;
+
+    position: relative;
 }
+
+.card:not(:nth-child(4n)) {
+    margin-right: 24px;
+}
+
+.blur_background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    border: 1px solid red;
+    z-index: 1;
+}
+
+.card__content {
+    position: relative;
+    z-index: 2;
+    padding: 8px;
+    border: 1px solid yellowgreen;
+}
+
+.card__image {
+    width: 266px;
+    height: 400px;
+    background-size: cover;
+    border-radius: 12px;
+    margin-bottom: 20px;
+}
+
+.card__title {
+    font-size: 16px;
+    display: block;
+    text-decoration: none;
+    color: var(--color-main);
+    margin-bottom: 16px;
+}
+
+.card__favorite {
+    color: #7b6ff6;
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    cursor: pointer;
+    margin-bottom: 16px;
+}
+
+.card__favorite__checked {
+    color: #37d8a7;
+}
+
+
+
+
+
 
 .card__star {
     display: flex;
@@ -33,14 +80,9 @@
 .card_content_bottom {
     width: 150px;
     /* height: 80px; */
-    padding: 8px 0px 0px 0px;
+    padding: 8px 0 0 0;
     /* display: flex; */
     gap: 16px;
-}
-
-.card_image {
-    padding: 8px;
-    font-size: 16px;
 }
 
 .card__poster {
@@ -52,25 +94,10 @@
     height: 400px; */
 }
 
-.card__content {
-    display: flex;
-    justify-content: space-evenly;
-    margin: 0;
-    font-family: Poppins;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-    text-align: left;
-
-}
 
 .card__content__year {
     /* display: block; */
     margin: 0;
-}
-.card__title {
-    font-size: 1rem;
 }
 
 .card__content__link {
