--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -1,25 +1,36 @@
-*, * ::before, * ::after { 
+*, * ::before, * ::after {
     box-sizing: border-box;
 }
 
 .main {
     text-align: center;
     color: var(--color-main);
+
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+
 }
 
 .title {
     font-size: 64px;
+    margin-bottom: 16px;
 }
 
 .search {
-    max-width: 588px;
-    height: 144px;
-    margin-bottom: 150px;
     display: flex;
     flex-direction: column;
+    margin-bottom: 150px;
+    border: 1px solid green;
+
+    text-align: left;
 }
 .search_text {
     font-size: 16px;
+    white-space: pre;
+    color: var(--color-secondary);
 }
 
 .search_input_button {
@@ -30,11 +41,22 @@
     height: 64px;
 }
 
+.input_group_input {
+    background: var(--input-background) !important;
+    color: white !important;
+}
+
+.input_group_input::placeholder {
+    color: var(--input-placeholder-color) !important;
+}
+
 .input_group_btn {
     padding: 0;
-    margin: 0;  
+    margin: 0;
     width: 144.6px;
-    height: 69.6px;
+    height: 64px;
+    border-radius: 12px !important;
+    background: #7b6ef6 !important;
 }
 
 .form {
@@ -44,7 +66,7 @@
     margin: 0 auto;
 }
 
-.films_content{
+.films_content {
     margin: 0;
     padding: 0;
 }
