--- a/src/components/CardFilm/CardFilm.module.css
+++ b/src/components/CardFilm/CardFilm.module.css
@@ -1,9 +1,7 @@
 .card {
-    border: 2px solid green;
     border-radius: 12px;
     text-align: left;
     margin-bottom: 16px;
-
     position: relative;
 }
 
@@ -17,15 +15,15 @@
     left: 0;
     height: 100%;
     width: 100%;
-    border: 1px solid red;
     z-index: 1;
 }
 
 .card__content {
+    /* border: 1px solid red; */
     position: relative;
     z-index: 2;
     padding: 8px;
-    border: 1px solid yellowgreen;
+    
 }
 
 .card__image {
@@ -34,6 +32,7 @@
     background-size: cover;
     border-radius: 12px;
     margin-bottom: 20px;
+    z-index: 0;
 }
 
 .card__title {
