--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -13,7 +13,6 @@
 .page__content {
     width: 1270px;
     margin: 0 auto;
-    /* border: 1px solid green; */
 }
 
 .navbar {
@@ -21,7 +20,6 @@
     align-items: center;
     justify-content: space-between;
     padding: 14px;
-    /* border: 1px solid white; */
 }
 
 .settings {
@@ -80,7 +78,8 @@
     width: 20px;
     height: 20px;
     margin-left: 10px;
-
+    color: var(--link-color);
+    scale: 1.2;
     border-radius: 50%;
     background-color: blueviolet;
 }
