--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -70,6 +70,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+
+}
+
+.spiner  {
+    /* margin: 0 auto; */
+    margin-left: 600px;
 }
 
 .has_error_message {
@@ -77,6 +83,5 @@
     margin-top: 200px;
     color: var(--color-main);
 }
-
 
 
