--- a/src/components/CardFilm/CardFilm.module.css
+++ b/src/components/CardFilm/CardFilm.module.css
@@ -37,9 +37,12 @@
 }
 
 .card__title {
-    font-size: 16px;
-    display: block;
+    display: flex;
+    flex-direction: column;
     text-decoration: none;
+    min-width: 250px;
+    min-height: 100px;
+    font-size: 16px;
     color: var(--color-main);
     margin-bottom: 16px;
 }
