--- a/src/pages/Film/Film.module.css
+++ b/src/pages/Film/Film.module.css
@@ -8,56 +8,116 @@
     text-align: center;
 }
 
-.link__wrapper {
-    margin-left: 120px;
-}
-
 .link {
     text-decoration: none;
 }
 
-.btnback {
-    margin-left: 100px;
-    width: 200px;
-}
-
 .poster__wrapper {
     display: flex;
-    align-items: flex-start;
-    margin: 50px;
 }
 
-.poster {
-    display: block;
-    width: 300px;
-    height: 444px;
+.card__image {
+    width: 480px;
+    height: 720px;
+    background-size: cover;
+    border-radius: 12px;
+    margin-bottom: 20px;
+    z-index: 0;
 }
 
 .film {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
     font-family: 'serif', sans-serif;
     font-weight: 600;
     margin-left: 80px;
-    max-width: 1300px;
-    border: 10px solid grey;
-    border-radius: 7px;
     color: var(--color-main);
+    border: none;
+}
+.film > p {
+    border: none;
+}
+
+.film_title {
+    width: 100%;
+    height: 144px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+    padding: 40px;
+    margin-bottom: 80px;
+    opacity: 0.8;
+    border-radius: 24px;
+    background-color: #20283E;
+}
+
+.film_title_search {
+    color: #BEB7FB;
 }
 
 .film__detail { 
     display: flex;
     flex-direction: column;
+    width: 480px;
+    height: 632px;
 }
 
-.film__detail > :last-child {
-    border-top: 3px solid grey;
-    border-bottom: 3px solid grey;
+.film__detail > p {
+    font-family: Poppins;
+    font-size: 20px;
+    font-weight: 400;
+    margin: 0;
+}   
 
+.film_detail_starAndReting {
+    color: #FFAD49;
+    margin: 16px 0;
 }
 
-.film > * {
-    padding: 10px;
-} 
+.star_rating {
+    padding: 8px;
+    border-radius: 8px;
+    background-color: black;
+}
 
+.card__favorite {
+    color: #7b6ff6;
+    cursor: pointer;
+    padding-left: 30px;
+}
+
+.card__favorite__checked {
+    color: #37d8a7;
+}
+
+.reviews_name {
+    padding-left: 10px;
+    color: var(--color-main);
+    opacity: 0.8;
+}
+
+.reviews {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap; 
+    height: 288px;
+    gap: 16px;
+    border-radius: 24px;
+    background-color: #20283E;
+    color: white;
+    opacity: 0.8;
+    padding: 40px;
+}
+
+
+.reviews_detail {
+    display: flex;
+    justify-content: space-between
+}
+
+.reviews_title {
+    font-family: Poppins;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 32px;
+    text-align: left;
+}
